--- a/frontend/src/components/css/QuestionCard.css
+++ b/frontend/src/components/css/QuestionCard.css
@@ -5,8 +5,20 @@
   background-color: #f3ccf3;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
 
+.question-card:hover {
+  scale: 1.02;
+  transition: all 0.4s ease-out;
+  transform-origin: left top;
+  box-shadow: rgba(240, 46, 170, 0.4) -5px 5px,
+    rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px,
+    rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
+}
 .question-options {
   margin-left: 10px;
   margin-top: 10px;
