--- a/frontend/src/components/css/TopicNameAccordion.css
+++ b/frontend/src/components/css/TopicNameAccordion.css
@@ -3,6 +3,9 @@
   background-color: #f3ccf3;
   border-radius: 10px;
   font-weight: 600;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
 
 .accordion-list {
@@ -17,6 +20,7 @@
   border-radius: 10px;
   cursor: pointer;
   text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 }
 
 .accordion-list-item:hover {
