--- a/frontend/src/components/TopicNameAccordion/TopicNameAccordion.css
+++ b/frontend/src/components/TopicNameAccordion/TopicNameAccordion.css
@@ -14,6 +14,7 @@
 }
 
 .accordion-list-item {
+  min-height: 3rem;
   font-size: 13px;
   margin-bottom: 8px;
   background-color: #f3ccf3;
@@ -21,6 +22,13 @@
   border-radius: 10px;
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+  display: flex;
+  align-items: center;
+}
+
+.list-item-title {
+  display: flex;
+  gap: 5px;
 }
 
 .accordion-list-item:hover {
