--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -18,3 +18,10 @@
   height: 3rem;
   font-size: 1rem;
 }
+
+.forgot-password-container {
+  text-align: end;
+  margin-top: 10px;
+  font-size: 14px;
+  cursor: pointer;
+}
