--- a/frontend/src/components/SignInSignUpForm/signinsignupform.css
+++ b/frontend/src/components/SignInSignUpForm/signinsignupform.css
@@ -11,7 +11,8 @@
 .container {
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   position: relative;
   overflow: hidden;
   width: 55rem;
