--- a/frontend/src/pages/LearningPage/LearningPage.css
+++ b/frontend/src/pages/LearningPage/LearningPage.css
@@ -197,7 +197,7 @@
     position: absolute;
     top: -12px;
     font-size: 20px;
-    left: 160px;
+    left: 38%;
     z-index: 4;
     transition: all 0.5s ease-in-out;
   }
@@ -214,7 +214,7 @@
   }
 
   .aside-close {
-    transform: translateX(-200px);
+    transform: translateX(-300px);
   }
 
   .aside-close-btn {
